store on child component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,11 +14,11 @@
   </div>
 </div>
 
-<!-- <hr>
+<hr>
 
 <div class="text-center row">
   <div class="col">
-    <app-hijo [contador]="contador" (cambioContador)="contador = $event"></app-hijo>
+    <app-hijo></app-hijo>
   </div>
 </div>
- -->
+
